[WK1] Fixed-position elements jiggle up and down slightly during scrolling on a Retina display https://bugs.webkit.org/show_bug.cgi?id=100957

Reviewed by Simon Fraser.

WebCore doesn't yet support subpixel scrolling. WebKit2 forces
scrolling to always be integral. Now WebKit1 forces this as well.

I'm not sure how to write a test for this.

* WebView/WebDynamicScrollBarsView.mm:
(shouldRoundScrollOrigin): Returns YES if there are any position:fixed
or position:sticky elements in the page.
(-[WebDynamicScrollBarsView scrollClipView:toPoint:]): Round the
scroll origin to the nearest pixel if needed.


git-svn-id: svn://svn.chromium.org/blink/trunk@133225 bbb929c8-8fbe-4397-9dbb-9b2b20218538